--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
+user-sysmaint-split (3:0.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 20 Dec 2024 05:25:20 +0000
+
 user-sysmaint-split (3:0.1-2) unstable; urgency=low
 
   * Initial release.
 
- -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 15 Dec 2024 13:44:22 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 15 Dec 2024 13:44:22 +0000
