--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:0.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 24 Dec 2024 06:25:04 +0000
+
 user-sysmaint-split (3:0.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
