--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:0.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 29 Dec 2024 12:43:57 +0000
+
 user-sysmaint-split (3:0.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
