--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:0.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 30 Dec 2024 12:25:14 +0000
+
 user-sysmaint-split (3:0.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
