--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:0.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 31 Dec 2024 19:20:33 +0000
+
 user-sysmaint-split (3:0.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
