--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:0.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 06 Jan 2025 10:43:07 +0000
+
 user-sysmaint-split (3:0.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
