--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:1.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 06 Jan 2025 12:24:58 +0000
+
 user-sysmaint-split (3:1.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
