--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:1.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 06 Jan 2025 13:05:33 +0000
+
 user-sysmaint-split (3:1.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
