--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:1.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 06 Jan 2025 13:14:56 +0000
+
 user-sysmaint-split (3:1.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
