--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:1.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 12 Jan 2025 13:15:04 +0000
+
 user-sysmaint-split (3:1.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
