--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:1.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 14 Jan 2025 08:24:25 +0000
+
 user-sysmaint-split (3:1.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
