--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:2.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 15 Jan 2025 15:55:42 +0000
+
 user-sysmaint-split (3:2.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
