--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:2.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2025 13:35:56 +0000
+
 user-sysmaint-split (3:2.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
