--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:2.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 20 Jan 2025 11:43:46 +0000
+
 user-sysmaint-split (3:2.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
