--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:2.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 22 Jan 2025 13:52:52 +0000
+
 user-sysmaint-split (3:2.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
