--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:2.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 24 Jan 2025 15:10:31 +0000
+
 user-sysmaint-split (3:2.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
