--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 29 Jan 2025 14:03:43 +0000
+
 user-sysmaint-split (3:2.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
