--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 06 Feb 2025 14:58:56 +0000
+
 user-sysmaint-split (3:3.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
