--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 13 Feb 2025 23:04:52 +0000
+
 user-sysmaint-split (3:3.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
