--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 17 Feb 2025 12:28:46 +0000
+
 user-sysmaint-split (3:3.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
