--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 10 Mar 2025 07:43:17 +0000
+
 user-sysmaint-split (3:3.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
