--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 15 Mar 2025 11:05:17 +0000
+
 user-sysmaint-split (3:3.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
