--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 16 Mar 2025 10:39:58 +0000
+
 user-sysmaint-split (3:3.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
