--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:3.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 17 Mar 2025 09:37:44 +0000
+
 user-sysmaint-split (3:3.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
