--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 25 Mar 2025 13:33:06 +0000
+
 user-sysmaint-split (3:3.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
