--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 26 Mar 2025 09:18:21 +0000
+
 user-sysmaint-split (3:4.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
