--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 27 Mar 2025 08:44:22 +0000
+
 user-sysmaint-split (3:4.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
