--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 28 Mar 2025 14:50:50 +0000
+
 user-sysmaint-split (3:4.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
