--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 01 Apr 2025 08:47:44 +0000
+
 user-sysmaint-split (3:4.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
