--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 01 Apr 2025 14:15:14 +0000
+
 user-sysmaint-split (3:4.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
