--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 08 Apr 2025 14:09:27 +0000
+
 user-sysmaint-split (3:4.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
