--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:4.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 09 Apr 2025 16:15:26 +0000
+
 user-sysmaint-split (3:4.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
