--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:5.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 10 Apr 2025 11:40:07 +0000
+
 user-sysmaint-split (3:4.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
