--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:5.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 16 Apr 2025 22:52:16 +0000
+
 user-sysmaint-split (3:5.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
