--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:5.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 25 Apr 2025 14:18:38 +0000
+
 user-sysmaint-split (3:5.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
