--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:5.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 26 Apr 2025 03:44:24 +0000
+
 user-sysmaint-split (3:5.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
