--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 07 May 2025 05:04:07 +0000
+
 user-sysmaint-split (3:5.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
