--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 09 May 2025 11:47:48 +0000
+
 user-sysmaint-split (3:6.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
