--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 20 May 2025 11:41:11 +0000
+
 user-sysmaint-split (3:6.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
