--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 21 May 2025 14:35:06 +0000
+
 user-sysmaint-split (3:6.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
