--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 06 Jun 2025 20:56:00 +0000
+
 user-sysmaint-split (3:6.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
