--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:6.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 14 Jun 2025 12:01:47 +0000
+
 user-sysmaint-split (3:6.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
