--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:7.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 19 Jul 2025 09:48:17 +0000
+
 user-sysmaint-split (3:6.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
