--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:7.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 24 Jul 2025 06:46:18 +0000
+
 user-sysmaint-split (3:7.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
