--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:7.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 03 Aug 2025 11:33:24 +0000
+
 user-sysmaint-split (3:7.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
