--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:7.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 04 Aug 2025 09:27:36 +0000
+
 user-sysmaint-split (3:7.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
