--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:7.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 30 Aug 2025 14:20:43 +0000
+
 user-sysmaint-split (3:7.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
