--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 07 Sep 2025 08:06:16 +0000
+
 user-sysmaint-split (3:7.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
