--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 13 Sep 2025 07:29:56 +0000
+
 user-sysmaint-split (3:8.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
