--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 16 Sep 2025 05:16:02 +0000
+
 user-sysmaint-split (3:8.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
