--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 22 Sep 2025 17:27:16 +0000
+
 user-sysmaint-split (3:8.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
