--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 26 Sep 2025 09:33:49 +0000
+
 user-sysmaint-split (3:8.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
