--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 28 Sep 2025 21:11:39 +0000
+
 user-sysmaint-split (3:8.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
