--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 13 Oct 2025 13:54:44 +0000
+
 user-sysmaint-split (3:8.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
