--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 18 Oct 2025 09:20:53 +0000
+
 user-sysmaint-split (3:8.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
