--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:8.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 20 Oct 2025 14:52:14 +0000
+
 user-sysmaint-split (3:8.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
