--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:9.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 26 Oct 2025 12:32:22 +0000
+
 user-sysmaint-split (3:9.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
