--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:9.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 27 Oct 2025 13:38:51 +0000
+
 user-sysmaint-split (3:9.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
