--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:9.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 29 Oct 2025 07:38:28 +0000
+
 user-sysmaint-split (3:9.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
