--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:9.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 31 Oct 2025 14:39:58 +0000
+
 user-sysmaint-split (3:9.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
