--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:9.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 01 Nov 2025 12:38:13 +0000
+
 user-sysmaint-split (3:9.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
