--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 09 Nov 2025 08:18:32 +0000
+
 user-sysmaint-split (3:9.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
