--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 10 Nov 2025 08:01:49 +0000
+
 user-sysmaint-split (3:10.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
