--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 12 Nov 2025 06:14:14 +0000
+
 user-sysmaint-split (3:10.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
