--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 13 Nov 2025 12:25:15 +0000
+
 user-sysmaint-split (3:10.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
