--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 21 Nov 2025 09:21:48 +0000
+
 user-sysmaint-split (3:10.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
