--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-sysmaint-split (3:10.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 12 Dec 2025 13:19:31 +0000
+
 user-sysmaint-split (3:10.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
